# golana

./: .gitignore  Cargo.toml  LICENSE  MILESTONES.md  README.md  WHY_GOLANA.md
cli/: .gitignore  Cargo.toml  build.rs
cli/go/solana/: ffi.go  solana.go
cli/go/token/: ffi.go  token.go
cli/src/: airdrop.rs  build.rs  config.rs  deploy.rs  idl.rs  init.rs  main.rs  template.rs  test.rs  util.rs
docs/: WHAT.md  getting_started.md  getting_started_local.md  installation.md  programming_golana.md  solana_os.md  solana_serverless.md  solana_simplified.md
examples/: README.md
examples/escrow/: .gitignore  .mocharc.cjs  Golana.toml  main.go  package-lock.json  package.json  tsconfig.json
examples/escrow/tests/: escrow.ts
examples/escrow/ts/: golana.ts  loader_idl.json  loader_types.ts
examples/helloworld/: .eslintrc.json  Golana.toml  main.go  package-lock.json  package.json  tsconfig.json
examples/helloworld/tests/: helloworld.ts
examples/swap/: .eslintrc  .mocharc.cjs  Golana.toml  main.go  package-lock.json  package.json  tsconfig.json
examples/swap/instructions/: closePool.go  createPool.go  deposit.go  trade.go  withdraw.go
examples/swap/tests/: swap.ts
go/fmt2/: fmt2.go
go/math2/: math2.go
go/solana/: ffi.go  solana.go  token.go
go/token/: ffi.go  token.go
golana/: Cargo.toml
golana/src/: checker.rs  errors.rs  lib.rs
lang/: .gitignore  Cargo.toml
lang/src/: engine.rs  entrypoint.rs  lib.rs  processor.rs
lang/src/go_lib/: fmt.rs
lang/tests/: functional.rs
lib/solana/: ffi.go  solana.go  token.go
loader/: Anchor.toml  Cargo.toml  package-lock.json
loader/programs/loader/: Cargo.toml
loader/programs/loader/src/: goscript.rs  lib.rs  malloc.rs
loader/programs/loader/src/ffi/: fmt2.rs  math2.rs  mod.rs  solana.rs  token.rs
loader/tests/: loader.ts
src/: engine.rs  go_lib_fmt.rs  lib.rs  processor.rs
ts/: .eslintrc.json  .npmignore  package-lock.json  package.json  tsconfig.json
ts/src/: address.ts  idl.ts  index.ts  loader.ts  types.ts
