[package]
name = "golana-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/oxfeeefeee/golana/"
keywords = ["solana", "goscript"]
description = "The CLI of the Golana project."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.18", features = ["derive"] }
toml = "0.5.9"
serde = "1.0.136"
serde_derive = "1.0.136"
borsh = "0.9.3" 
anchor-client = "0.25.0"
shellexpand = "2.1.0"
solana-sdk = "~1.10.29"
dirs = "3.0"
serde_json = "1.0"
anchor-syn = { version = "0.25.0", features = ["idl"] }
heck = "0.3.1"

[dependencies.go-engine] 
default-features = false
features = ["read_fs", "read_zip", "codegen", "btree_map"]
version = "0.1.0"
#path = "../../goscript/engine"


[dependencies.go-vm] 
features = ["btree_map"]
version = "0.1.0"
#path = "../../goscript/vm"


[dependencies.golana] 
path = "../golana" 
version = "0.1.0"

[dependencies.golana-loader] 
path = "../loader/programs/loader" 
version = "0.1.0"


[build-dependencies]
anyhow = "1.0"
walkdir = "2"
zip = { version = "0.6.2", features = ["deflate"], default-features = false }
