[package]
name = "golana"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/oxfeeefeee/golana/"
keywords = ["solana", "goscript"]
description = "The rust library for the Golana project."
 
[dependencies]
anchor-lang = "0.25.0"
solana-program = "1.10.41"
borsh = "0.9.3" 

[dependencies.go-vm] 
features = ["btree_map", "serde_borsh"]
version = "0.1.0"
# path = "../../goscript/vm"
