[package]
name = "golana"
version = "0.1.0"
edition = "2021"
publish = false


[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "1.11.6"

[dependencies.goscript-engine] 
path = "../../goscript/engine"
default-features = false
features = ["read_map"]
version = "0.1.0" 

[dependencies.goscript-vm] 
path = "../../goscript/vm"
version = "0.1.0"

[dev-dependencies]
solana-program-test = "1.11.6"
solana-sdk = "1.11.6"
 
[lib]
crate-type = ["cdylib", "lib"]
