[package]
name = "golana"
version = "0.1.0"
edition = "2021"
publish = false


[features]
default = ["custom-heap"]
custom-heap = []
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "1.11.6"

[dependencies.smalloc] 
path = "../../smalloc"
version = "0.1.0"

[dependencies.goscript-engine] 
path = "../../goscript/engine"
default-features = false
features = ["read_map", "btree_map"]
version = "0.1.0" 

[dependencies.goscript-vm] 
path = "../../goscript/vm"
version = "0.1.0"

[dev-dependencies]
solana-program-test = "1.11.6"
solana-sdk = "1.11.6"
 
[lib]
crate-type = ["cdylib", "lib"]
