[package]
name = "loader"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "loader"

[features]
custom-heap = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["custom-heap"]

[dependencies]
anchor-lang = "0.25.0"
solana-program = "1.10.41"
borsh = "0.9.3" 

[dependencies.goscript-vm] 
path = "../../../../goscript/vm"
features = ["btree_map"]
version = "0.1.0"

[dependencies.smalloc] 
path = "../../../../smalloc"
version = "0.1.0"

[dependencies.golana] 
path = "../../../golana"
version = "0.1.0"