[package]
name = "golana-loader"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/oxfeeefeee/golana/"
keywords = ["solana", "goscript"]
description = "The Goscript bytecode loader created with Anchor"

[lib]
crate-type = ["cdylib", "lib"]

[features]
custom-heap = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["custom-heap"]

[dependencies]
anyhow = "1.0"
anchor-lang = "0.28.0"
solana-program = "1.16.9"
borsh = "0.10.3" 
spl-token = {version = "4.0.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "2.0.0", features = ["no-entrypoint"]}
spl-math = {version = "0.2.0", features = ["no-entrypoint"]}
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}

[dependencies.go-vm] 
features = ["btree_map"]
version = "0.1.2"
# path = "../../../../goscript/vm"

[dependencies.smalloc] 
version = "0.1.2"
# path = "../../../../smalloc"

[dependencies.golana]
version = "0.1.0"
path = "../../../golana"